remove lazy loading

--- a/FactoryApp.csproj
+++ b/FactoryApp.csproj
@@ -13,3 +13,4 @@
     </PackageReference>
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.0" />
   </ItemGroup>
+  </Project>
